--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+      　<meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Web Designer - Norihiro Takeda</title>
         <meta name="description" content="Webデザイナー タケダノリヒロのポートフォリオサイトです。アフリカ・ルワンダを中心に活動しています。">
         <meta name="keywords" content="Web, デザイン, デザイナー, ポートフォリオ, Web制作">
