--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Norihiro Takeda</span></h1>
-                <img src="./images/profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/profile_sepia.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>アフリカ・ルワンダ在住のタケダノリヒロです。大手メーカー、青年海外協力隊を経て、現在は経営者・Webデザイナー・ブロガーとして活動中。ビジネス×ソーシャル×デザインの視点から、地域や企業の問題解決をお手伝いします。</p>
             </div>
         </header>
@@ -43,11 +43,11 @@
         <h2 class="text-center">Works</h2>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/business.jpg" alt="Business in Rwanda">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
+                        <h3>Business in Rwanda</h3>
+                        <small>2018.07.01</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -55,11 +55,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/social.jpg" alt="Social works">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>きらめき花子様 名刺</h3>
-                        <small>2016.04.20</small>
+                        <h3>Social works</h3>
+                        <small>2018.07.01</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -67,11 +67,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/design.jpg" alt="Design works">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
+                        <h3>Design works</h3>
+                        <small>2018.07.01</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -79,11 +79,23 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/social.jpg" alt="Social works">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>きらめき花子様 名刺</h3>
-                        <small>2016.04.20</small>
+                        <h3>Social works</h3>
+                        <small>2018.07.01</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+         <div class="works-box">
+            <a href="#">
+                <img src="./images/design.jpg" alt="Design works">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>Design works</h3>
+                        <small>2018.07.01</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -91,11 +103,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/business.jpg" alt="Business in Rwanda">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
+                        <h3>Business in Rwanda</h3>
+                        <small>2018.07.01</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -103,11 +115,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/design.jpg" alt="Design works">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
+                        <h3>Design works</h3>
+                        <small>2018.07.01</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -115,35 +127,23 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/business.jpg" alt="Business in Rwanda">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
+                        <h3>Business in Rwanda</h3>
+                        <small>2018.07.01</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
             </a>
         </div>
-        <div class="works-box">
+         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/social.jpg" alt="Social works">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>きらめき花子様 名刺</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
+                        <h3>Social works</h3>
+                        <small>2018.07.01</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
